--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -14,7 +14,8 @@
         <ul>
             <li><a href="/admin/users">Управление Пользователями</a></li>
             <li><a href="/admin/cars">Управление Автомобилями</a></li>
-            <li><a href="/dashboard">Пользовательский Дашборд</a></li>
+            <li><a href="/admin/booked_cars">Забронированные автомобили</a></li>
+<!--            <li><a href="/dashboard">Пользовательский Дашборд</a></li>-->
             <li><a href="/logout">Выйти</a></li>
         </ul>
     </nav>
