--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
 <body>
 <nav class="navbar">
     <a href="/">Главная</a>
-    <a href="/cars">Автомобили</a>
+    <a href="/bookings">Автомобили</a>
 
     {{if .IsAuthenticated}}
     <!-- Если пользователь авторизован -->
